--- a/html/fitting.html
+++ b/html/fitting.html
@@ -1,3 +1,7 @@
+---
+permalink: /:basename/
+---
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -11,7 +15,7 @@
 <body onload="set_defaults()">
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../index.html" class="nav-button">Home</a>
+            <a href="../" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="(x1, y1), (x2, y2), ..." class="text-box">
