--- a/html/matrix.html
+++ b/html/matrix.html
@@ -1,3 +1,7 @@
+---
+permalink: /:basename/
+---
+
 <!DOCTYPE html>
 
 <head>
@@ -14,7 +18,7 @@
 <body onload="set_initial_matrices()">
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../index.html" class="nav-button">Home</a>
+            <a href="../" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
         </div>
