--- a/html/stat.html
+++ b/html/stat.html
@@ -1,3 +1,7 @@
+---
+permalink: /:basename/
+---
+
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <link rel="stylesheet" href="../css/stat.css"></link>
@@ -10,7 +14,7 @@
 <body>
     <div class="container medium-container fade text-monospace">
         <div>
-            <a href="../index.html" class="nav-button">Home</a>
+            <a href="../" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="Enter the numbers separated by space" class="text-box">
