--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -1,3 +1,7 @@
+---
+permalink: /:basename/
+---
+
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
