--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <img src="resources/cu.png" class="logo float-right"></img>
         <h1>CS Math Society</h1>
         <h3>Projects</h3>
-        <a href="html/solver.html" class="nav-button">Equation Solver</a><br />
-        <a href="html/stat.html" class="nav-button">Statistics Calculator</a><br />
-        <a href="html/fitting.html" class="nav-button">Curve Fitting</a><br />
-        <a href="html/matrix.html" class="nav-button">Linear Algebra</a><br />
+        <a href="/solver/" class="nav-button">Equation Solver</a><br />
+        <a href="/stat/" class="nav-button">Statistics Calculator</a><br />
+        <a href="/fitting/" class="nav-button">Curve Fitting</a><br />
+        <a href="/matrix/" class="nav-button">Linear Algebra</a><br />
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
@@ -29,7 +29,7 @@
         </a>
         <div class="bottom-buttons">
             <a href="https://github.com/cs-math/cs-math.github.io" target="_blank">Code on GitHub</a><br />
-            <a href="html/thankyou.html" onclick="window.close()">Exit</a>
+            <a href="/thankyou/" onclick="window.close()">Exit</a>
         </div>
     </div>
 
