--- a/html/solver.html
+++ b/html/solver.html
@@ -1,3 +1,7 @@
+---
+permalink: /:basename/
+---
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -10,7 +14,7 @@
 <body>
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../index.html" class="nav-button">Home</a>
+            <a href="../" class="nav-button">Home</a>
         </div>
         <div>
             <select class="dropdown" id="equation-dropdown" onchange="handle_change(this)">
