edit css, configure jekyll

--- a/html/matrix.html
+++ b/html/matrix.html
@@ -18,7 +18,7 @@ permalink: /:basename/
 <body onload="set_initial_matrices()">
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../" class="nav-button">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
         </div>
