--- a/html/solver.html
+++ b/html/solver.html
@@ -2,6 +2,8 @@
 permalink: /:basename/
 ---
 
+<!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -14,7 +16,7 @@ permalink: /:basename/
 <body>
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../" class="nav-button">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div>
             <select class="dropdown" id="equation-dropdown" onchange="handle_change(this)">
