--- a/html/stat.html
+++ b/html/stat.html
@@ -2,6 +2,8 @@
 permalink: /:basename/
 ---
 
+<!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <link rel="stylesheet" href="../css/stat.css"></link>
@@ -14,7 +16,7 @@ permalink: /:basename/
 <body>
     <div class="container medium-container fade text-monospace">
         <div>
-            <a href="../" class="nav-button">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="Enter the numbers separated by space" class="text-box">
