--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
+
 <head>
-    <link rel="stylesheet" href="css/global.css"></link>
+    <link rel="stylesheet" href="css/global.css">
+    </link>
+    <script src="js/index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CS Math Society</title>
 </head>
-<body>
+
+<body onload="replace_links()">
     <div class="container fade">
         <img src="resources/fci.png" class="logo float-left"></img>
         <img src="resources/cu.png" class="logo float-right"></img>
