--- a/html/fitting.html
+++ b/html/fitting.html
@@ -2,6 +2,8 @@
 permalink: /:basename/
 ---
 
+<!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -15,7 +17,7 @@ permalink: /:basename/
 <body onload="set_defaults()">
     <div class="container enlarged-container fade text-monospace">
         <div>
-            <a href="../" class="nav-button">Home</a>
+            <a href="../index.html" class="nav-button">Home</a>
         </div>
         <div class="equation-box">
             <input id="arr-text-box" placeholder="(x1, y1), (x2, y2), ..." class="text-box">
