--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -2,6 +2,8 @@
 permalink: /:basename/
 ---
 
+<!DOCTYPE html>
+
 <head>
     <link rel="stylesheet" href="../css/global.css"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
