Set lang attribute

--- a/html/fitting.html
+++ b/html/fitting.html
@@ -4,6 +4,8 @@ permalink: /:basename/
 
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -22,15 +24,9 @@ permalink: /:basename/
         <div class="equation-box">
             <input id="arr-text-box" placeholder="(x1, y1), (x2, y2), ..." class="text-box">
             <div class="button-div">
-                <input type="button"
-                    class="main-button"
-                    value="Calculate"
-                    onclick="choose_fitting_method()">
+                <input type="button" class="main-button" value="Calculate" onclick="choose_fitting_method()">
                 </input>
-                <input type="button"
-                    class="main-button danger"
-                    value="Clear"
-                    onclick="clear_graph_elements()">
+                <input type="button" class="main-button danger" value="Clear" onclick="clear_graph_elements()">
                 </input>
             </div>
             <div class="solution-box">
@@ -42,3 +38,5 @@ permalink: /:basename/
         </div>
     </div>
 </body>
+
+</html>
