--- a/html/matrix.html
+++ b/html/matrix.html
@@ -4,6 +4,8 @@ permalink: /:basename/
 
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/matrix.css">
@@ -89,3 +91,5 @@ permalink: /:basename/
             <div class="solution-label matrix-div" id="general-label"></div>
         </div>
 </body>
+
+</html>
