--- a/html/solver.html
+++ b/html/solver.html
@@ -4,6 +4,8 @@ permalink: /:basename/
 
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
     <link rel="stylesheet" href="../css/global.css">
     </link>
@@ -44,3 +46,5 @@ permalink: /:basename/
         </div>
     </div>
 </body>
+
+</html>
