--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -4,15 +4,19 @@ permalink: /:basename/
 
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
-    <link rel="stylesheet" href="../css/global.css"></link>
+    <link rel="stylesheet" href="../css/global.css">
+    </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CS Math Society - Thank you</title>
 </head>
+
 <body>
     <div class="container fade">
-        <img src="../resources/fci.png" class="logo float-left"></img>
-        <img src="../resources/cu.png" class="logo float-right"></img>
+        <img src="../resources/fci.png" class="logo float-left" alt="fci-logo"></img>
+        <img src="../resources/cu.png" class="logo float-right" alt="cu-logo"></img>
         <h1>CS Math Society</h1>
         <div>
             Thank you for using our tools. We were unable to close your browser since you were using it. You can close
@@ -21,3 +25,5 @@ permalink: /:basename/
     </div>
 
 </body>
+
+</html>
