--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html lang="en">
 <head>
     <link rel="stylesheet" href="css/global.css">
     </link>
@@ -10,8 +11,8 @@
 
 <body onload="replace_links()">
     <div class="container fade">
-        <img src="resources/fci.png" class="logo float-left"></img>
-        <img src="resources/cu.png" class="logo float-right"></img>
+        <img src="resources/fci.png" class="logo float-left" alt="fci-logo"></img>
+        <img src="resources/cu.png" class="logo float-right" alt="cu-logo"></img>
         <h1>CS Math Society</h1>
         <h3>Projects</h3>
         <a href="/solver/" class="nav-button">Equation Solver</a><br />
@@ -39,3 +40,4 @@
     </div>
 
 </body>
+</html>
