--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/global.css">
     </link>
     <script src="js/index.js"></script>
@@ -40,4 +42,5 @@
     </div>
 
 </body>
+
 </html>
