--- a/html/matrix.html
+++ b/html/matrix.html
@@ -7,6 +7,7 @@ permalink: /:basename/
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/matrix.css">
     </link>
