--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -7,6 +7,7 @@ permalink: /:basename/
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/global.css">
     </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
