Remove duplicates and refactor curve fitting

--- a/html/matrix.html
+++ b/html/matrix.html
@@ -15,7 +15,7 @@ permalink: /:basename/
     <script src="../js/global.js"></script>
     <script src="../js/matrix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Linear Algebra</title>
+    <title>Matrices Calculator</title>
 </head>
 
 <body onload="set_initial_matrices()">
