--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="/solver/" class="nav-button">Equation Solver</a><br />
         <a href="/stat/" class="nav-button">Statistics Calculator</a><br />
         <a href="/fitting/" class="nav-button">Curve Fitting</a><br />
-        <a href="/matrix/" class="nav-button">Linear Algebra</a><br />
+        <a href="/matrix/" class="nav-button">Matrices Calculator</a><br />
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
