Linear Algebra initial

--- a/html/solver.html
+++ b/html/solver.html
@@ -35,6 +35,7 @@ permalink: /:basename/
             </div>
             <div class="control-buttons" style="display: none;">
                 <input type="button" class="main-button" value="Calculate" onclick="check_and_calculate()">
+                </input>
                 <input type="button" class="main-button danger" value="Clear"
                     onclick="clear_elements(['number-box', 'solution-label', 'algorithm-label'])">
                 </input>
