--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/index.css">
     </link>
     <script src="js/index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,10 +18,23 @@
         <img src="resources/cu.png" class="logo float-right" alt="cu-logo"></img>
         <h1>CS Math Society</h1>
         <h3>Projects</h3>
-        <a href="/solver/" class="nav-button">Equation Solver</a><br />
-        <a href="/stat/" class="nav-button">Statistics Calculator</a><br />
-        <a href="/fitting/" class="nav-button">Curve Fitting</a><br />
-        <a href="/matrix/" class="nav-button">Matrices Calculator</a><br />
+        <div id="projects">
+            <div>
+                <a href="/stat/" class="nav-button">Statistics Calculator</a>
+            </div>
+            <div>
+                <a href="/matrix/" class="nav-button">Matrices Calculator</a>
+            </div>
+            <div>
+                <a href="/solver/" class="nav-button">Equation Solver</a>
+            </div>
+            <div>
+                <a href="/fitting/" class="nav-button">Curve Fitting</a>
+            </div>
+            <div>
+                <a href="/algebra/" class="nav-button">Linear Algebra</a>
+            </div>
+        </div>
         <h3>Team members</h3>
         Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
         Mostafa Hesham Ragab Allam - 20206126<br />
