Linear Algebra math.js for inverse

--- a/html/algebra.html
+++ b/html/algebra.html
@@ -11,6 +11,7 @@ permalink: /:basename/
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/algebra.css">
     </link>
+    <script src="../scripts/math.min.js"></script>
     <script src="../js/global.js"></script>
     <script src="../js/algebra.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,6 +29,8 @@ permalink: /:basename/
                 <option value="1">1 equation</option>
                 <option value="2">2 equations</option>
                 <option value="3">3 equations</option>
+                <option value="4">4 equations</option>
+                <option value="5">5 equations</option>
             </select>
         </div>
 
@@ -39,6 +42,7 @@ permalink: /:basename/
                 <input type="button" id="clear-button" class="main-button danger" value="Clear"></input>
             </div>
         </div>
+        <div id="validation" class="validation"></div>
         <div id="solution-box" class="solution-box">
         </div>
     </div>
