No wordwrap in linear algebra

--- a/html/algebra.html
+++ b/html/algebra.html
@@ -19,7 +19,7 @@ permalink: /:basename/
 </head>
 
 <body>
-    <div class="container enlarged-container fade text-monospace">
+    <div class="container auto-container fade text-monospace">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
