Add up to 10 equations

--- a/html/algebra.html
+++ b/html/algebra.html
@@ -31,6 +31,11 @@ permalink: /:basename/
                 <option value="3">3 equations</option>
                 <option value="4">4 equations</option>
                 <option value="5">5 equations</option>
+                <option value="6">6 equations</option>
+                <option value="7">7 equations</option>
+                <option value="8">8 equations</option>
+                <option value="9">9 equations</option>
+                <option value="10">10 equations</option>
             </select>
         </div>
 
