Remove permalinks for ease of running

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
     </link>
-    <script src="js/index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CS Math Society</title>
 </head>
@@ -20,19 +19,19 @@
         <h3>Projects</h3>
         <div id="projects">
             <div>
-                <a href="/stat/" class="nav-button">Statistics Calculator</a>
+                <a href="html/stat.html" class="nav-button">Statistics Calculator</a>
             </div>
             <div>
-                <a href="/matrix/" class="nav-button">Matrices Calculator</a>
+                <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
             </div>
             <div>
-                <a href="/solver/" class="nav-button">Equation Solver</a>
+                <a href="html/solver.html" class="nav-button">Equation Solver</a>
             </div>
             <div>
-                <a href="/fitting/" class="nav-button">Curve Fitting</a>
+                <a href="html/fitting.html" class="nav-button">Curve Fitting</a>
             </div>
             <div>
-                <a href="/algebra/" class="nav-button">Linear Algebra</a>
+                <a href="html/algebra.html" class="nav-button">Linear Algebra</a>
             </div>
         </div>
         <h3>Team members</h3>
@@ -51,7 +50,7 @@
         </a>
         <div class="bottom-buttons">
             <a href="https://github.com/cs-math/cs-math.github.io" target="_blank">Code on GitHub</a><br />
-            <a href="/thankyou/" onclick="window.close()">Exit</a>
+            <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
     </div>
 
