--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/index.css">
     </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CS Math Society</title>
@@ -17,18 +16,23 @@
         <img src="resources/cu.png" class="logo float-right" alt="cu-logo"></img>
         <h1>CS Math Society</h1>
         <h3>Projects</h3>
-        <div id="projects">
-            <div>
-                <a href="html/stat.html" class="nav-button">Statistics Calculator</a>
-            </div>
-            <div>
-                <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
-            </div>
+
+        <h4>Simple projects</h4>
+        <div class="projects">
             <div>
                 <a href="html/solver.html" class="nav-button">Equation Solver</a>
             </div>
             <div>
+                <a href="html/stat.html" class="nav-button">Statistics Calculator</a>
+            </div>
+            <div>
                 <a href="html/fitting.html" class="nav-button">Curve Fitting</a>
+            </div>
+        </div>
+        <h4>Linear Algebra</h4>
+        <div class="projects">
+            <div>
+                <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
             </div>
             <div>
                 <a href="html/algebra.html" class="nav-button">Linear Algebra</a>
