Add eigenvalue of 2x2 matrix

--- a/html/matrix.html
+++ b/html/matrix.html
@@ -9,6 +9,7 @@
     </link>
     <script src="../scripts/math.min.js"></script>
     <script src="../js/global.js"></script>
+    <script src="../js/solver.js"></script>
     <script src="../js/matrix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matrices Calculator</title>
