--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>CS Math Society</title>
 </head>
 
-<body onload="replace_links()">
+<body>
     <div class="container fade">
         <img src="resources/fci.png" class="logo float-left" alt="fci-logo"></img>
         <img src="resources/cu.png" class="logo float-right" alt="cu-logo"></img>
