--- a/html/algebra.html
+++ b/html/algebra.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container auto-container fade text-monospace">
+    <div class="container auto-container fade text-monospace" id="full-view">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
