--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 </head>
 
 <body>
-    <div class="container fade">
-        <img src="resources/fci.png" class="logo float-left" alt="fci-logo"></img>
-        <img src="resources/cu.png" class="logo float-right" alt="cu-logo"></img>
-        <h1>CS Math Society</h1>
-        <h3>Projects</h3>
-
-        <h4>Simple projects</h4>
-        <div class="projects">
+    <div class="fade">
+        <div class="logo"> <img src="resources/fci.png"> </div>
+        <div class="title"> <a href=https://github.com/cs-math/cs-math.github.io target=”_blank”>CS Math Society</a>
+        </div>
+        <div class="container" id="main">
             <div>
                 <a href="html/solver.html" class="nav-button">Equation Solver</a>
             </div>
@@ -28,33 +25,12 @@
             <div>
                 <a href="html/fitting.html" class="nav-button">Curve Fitting</a>
             </div>
-        </div>
-        <h4>Linear Algebra</h4>
-        <div class="projects">
             <div>
                 <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
             </div>
             <div>
                 <a href="html/algebra.html" class="nav-button">Linear Algebra</a>
             </div>
-        </div>
-        <h3>Team members</h3>
-        Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
-        Mostafa Hesham Ragab Allam - 20206126<br />
-        Ali Esmat Ahmed Orfi - 20206123<br />
-        Ahmed Wael Nagy Wanas - 20206008<br />
-        <h3>Under the supervision of</h3>
-        Dr. Eng. Mostafa Reda A. El Tantawi<br />
-        <h3>Helpful references</h3>
-        <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
-            Practical algorithms for solving a cubic equation
-        </a><br />
-        <a href="https://quarticequations.com/Quartic.pdf" target="_blank">
-            Practical algorithms for solving a quartic equation
-        </a>
-        <div class="bottom-buttons">
-            <a href="https://github.com/cs-math/cs-math.github.io" target="_blank">Code on GitHub</a><br />
-            <a href="html/thankyou.html" onclick="window.close()">Exit</a>
         </div>
     </div>
 
