--- a/html/fitting.html
+++ b/html/fitting.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container enlarged-container fade text-monospace">
+    <div class="container auto-container fade text-monospace">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
