--- a/html/solver.html
+++ b/html/solver.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container enlarged-container fade text-monospace">
+    <div class="container auto-container fade text-monospace" id="full-view">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
