Formatting and internal approximation in Viete's algorithm

--- a/html/stat.html
+++ b/html/stat.html
@@ -30,16 +30,16 @@
             </div>
         </div>
         <div class="checkboxes">
-            <label for="myCheck">So:</label> 
-            <input type="checkbox" id="myCheck" onclick="show('simple')">
-            <label for="myCheck">MoCT:</label> 
-            <input type="checkbox" id="myCheck" onclick="show('central')">
-            <label for="myCheck">MoD:</label> 
-            <input type="checkbox" id="myCheck" onclick="show('dispersion')">
+            <input type="checkbox" id="so-box" onclick="show('simple')">
+            <label for="so-box">Simple Operations</label>
+            <input type="checkbox" id="moct-box" onclick="show('central')">
+            <label for="moct-box">Measures of Central Tendency</label>
+            <input type="checkbox" id="mod-box" onclick="show('dispersion')">
+            <label for="mod-box">Measures of Dispersion</label>
         </div>
         <div class="solution-box">
             <div>
-                <h5>Sorted array:</h5> 
+                <h5>Sorted array:</h5>
                 <label class="solution-label" id="array"></label>
             </div>
          <div class="fade" id="simple"  style="display:none">
