--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo"> <img src="resources/fci.png"> </div>
         <div class="title"> <a href=https://github.com/cs-math/cs-math.github.io target=”_blank”>CS Math Society</a>
         </div>
-        <div class="container" id="main">
+        <div class="container">
             <div>
                 <a href="html/solver.html" class="nav-button">Equation Solver</a>
             </div>
