--- a/html/matrix.html
+++ b/html/matrix.html
@@ -12,7 +12,7 @@
     <script src="../js/solver.js"></script>
     <script src="../js/matrix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Matrices Calculator</title>
+    <title>CS Math Society - Matrices Calculator</title>
 </head>
 
 <body onload="set_initial_matrices()">
