--- a/html/system.html
+++ b/html/system.html
@@ -5,17 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/algebra.css">
+    <link rel="stylesheet" href="../css/system.css">
     </link>
     <script src="../scripts/math.min.js"></script>
     <script src="../js/global.js"></script>
-    <script src="../js/algebra.js"></script>
+    <script src="../js/system.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Linear Algebra</title>
+    <title>CS Math Society - System of Equations</title>
 </head>
 
 <body>
-    <div class="container auto-container fade text-monospace" id="full-view">
+    <div class="container auto-container fade text-monospace">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
