--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="fade">
-        <div class="logo"> <img src="resources/fci.png"> </div>
+        <div class="logo"> <img src="resources/fci.png" alt="fci logo"> </div>
         <div class="title"> <a href=https://github.com/cs-math/cs-math.github.io target=”_blank”>CS Math Society</a>
         </div>
         <div class="container">
@@ -29,7 +29,7 @@
                 <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
             </div>
             <div>
-                <a href="html/algebra.html" class="nav-button">Linear Algebra</a>
+                <a href="html/system.html" class="nav-button">System of Equations</a>
             </div>
         </div>
     </div>
