--- a/html/solver.html
+++ b/html/solver.html
@@ -9,11 +9,11 @@
     <script src="../js/solver.js"></script>
     <script src="../js/global.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Equation solver</title>
+    <title>CS Math Society - Equation solver</title>
 </head>
 
 <body>
-    <div class="container auto-container fade text-monospace" id="full-view">
+    <div class="container auto-container fade text-monospace">
         <div>
             <a href="../index.html" class="nav-button">Home</a>
         </div>
