--- a/html/fitting.html
+++ b/html/fitting.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="../resources/fci.png">
+
     <link rel="stylesheet" href="../css/global.css">
     </link>
     <script src="../scripts/chart.js"></script>
