--- a/html/matrix.html
+++ b/html/matrix.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="../resources/fci.png">
+
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/matrix.css">
     </link>
