--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="resources/fci.png">
     <link rel="stylesheet" href="css/global.css">
     </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
