--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="css/global.css">
     </link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CS Math Society</title>
+    <title>CS-Math Society</title>
 </head>
 
 <body>
     <div class="fade">
         <div class="logo"> <img src="resources/fci.png" alt="fci logo"> </div>
-        <div class="title"> <a href=https://github.com/cs-math/cs-math.github.io target=”_blank”>CS Math Society</a>
+        <div class="title"> <a href=https://github.com/cs-math/cs-math.github.io target=”_blank”>CS-Math Society</a>
         </div>
         <div class="container">
+            <h3>Basic Projects</h3>
             <div>
                 <a href="html/solver.html" class="nav-button">Equation Solver</a>
             </div>
@@ -26,12 +27,37 @@
             <div>
                 <a href="html/fitting.html" class="nav-button">Curve Fitting</a>
             </div>
+            <h3>Linear Algebra</h3>
             <div>
                 <a href="html/matrix.html" class="nav-button">Matrices Calculator</a>
             </div>
             <div>
                 <a href="html/system.html" class="nav-button">System of Equations</a>
             </div>
+            <h3>About Us</h3>
+            <p>
+                CS-Math Society is an organization created in Cairo University, Faculty of Computers and Artificial
+                Intelligence to encourage students to collaborate with each other and improve their mathematics and
+                Computer Science skills.
+            </p>
+            <h3>Team members</h3>
+            <p>
+                Omar Adel Abdel Hamid Ahmed Brikaa - 20206043<br />
+                Mostafa Hesham Ragab Allam - 20206126<br />
+                Ali Esmat Ahmed Orfi - 20206123<br />
+                Ahmed Wael Nagy Wanas - 20206008<br />
+            </p>
+            <h3>Under the supervision of</h3>
+            <p>Dr. Eng. Mostafa Reda A. El Tantawi</p>
+            <h3>Helpful references</h3>
+            <p>
+                <a href="https://quarticequations.com/Cubic.pdf" target="_blank">
+                    Practical algorithms for solving a cubic equation
+                </a><br />
+                <a href="https://quarticequations.com/Quartic.pdf" target="_blank">
+                    Practical algorithms for solving a quartic equation
+                </a>
+            </p>
         </div>
     </div>
 
