--- a/html/fitting.html
+++ b/html/fitting.html
@@ -12,7 +12,7 @@
     <script src="../js/global.js"></script>
     <script src="../js/fitting.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CS Math Society - Curve Fitting</title>
+    <title>CS-Math Society - Curve Fitting</title>
 </head>
 
 <body>
