--- a/html/solver.html
+++ b/html/solver.html
@@ -11,7 +11,7 @@
     <script src="../js/solver.js"></script>
     <script src="../js/global.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CS Math Society - Equation solver</title>
+    <title>CS-Math Society - Equation solver</title>
 </head>
 
 <body>
