--- a/html/stat.html
+++ b/html/stat.html
@@ -13,7 +13,7 @@
     <script src="../js/global.js"></script>
     <script src="../js/stat.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CS Math Society - Statistics Calculator</title>
+    <title>CS-Math Society - Statistics Calculator</title>
 </head>
 
 <body>
